[fix] updated swagger documentation
